# FunMar

./: .gitignore  FunMar.g4  README.md
MacOS/: CMakeLists.txt
MacOS/FunMar/FunMarAntlrTree/: CMakeLists.txt  FunMar.interp  FunMarBaseVisitor.hpp  FunMarLexer.tokens  FunMarParser.cpp  FunMarParser.h  FunMarVisitor.h
MacOS/FunMar/FunMarContainers/: Abstraction.cpp  Abstraction.hpp  CMakeLists.txt  FunMarList.hpp  FunMarStack.hpp  FunctionAbstraction.cpp  FunctionAbstraction.hpp  Rule.cpp  Rule.hpp  oldAbstraction.cpp  oldAbstraction.hpp  oldFunctionAbstraction.cpp  oldFunctionAbstraction.hpp
MacOS/FunMar/FunMarCore/: AbstractionManager.cpp  AbstractionManager.h  AbstractionManager.hpp  CMakeLists.txt  DecisionManager.cpp  DecisionManager.h  DecisionManager.hpp  Environment.cpp  Environment.h  Environment.hpp  EnvironmentManager.cpp  EnvironmentManager.h  EnvironmentManager.hpp  FunMarCompiler.hpp  Kernel.cpp  Kernel.h
MacOS/input/: FunMarMalloc.fm  compareArray  main.fm  python.fm
MacOS/samples/: main.cpp
MacOS/test/: test_FunctionAbstraction.cpp  test_PartialAbstraction.cpp
MacOS_Linux/: CMakeLists.txt
MacOS_Linux/FunMar/: CMakeLists.txt
MacOS_Linux/FunMar/FunMarAntlrTree/: CMakeLists.txt  FunMar.interp  FunMarBaseVisitor.cpp  FunMarLexer.cpp  FunMarLexer.h  FunMarLexer.interp  FunMarVisitor.cpp  FunMarVisitor.h
MacOS_Linux/FunMar/FunMarContainers/: Abstraction.cpp  CMakeLists.txt  FunMarList.hpp  FunMarStack.cpp  FunctionAbstraction.cpp  FunctionAbstraction.hpp  Rule.cpp  Rule.hpp
MacOS_Linux/FunMar/FunMarCore/: AbstractionManager.hpp  CMakeLists.txt  Environment.hpp  EnvironmentManager.cpp  Kernel.cpp  Kernel.hpp
MacOS_Linux/antlr4-cpp-runtime/: CMakeLists.txt
MacOS_Linux/antlr4-cpp-runtime/runtime/: CMakeLists.txt
MacOS_Linux/input/: LLM.fm  comparator.fm  delete.fm  input.txt  main.fm  mallocZeroes.fm  whiteSpace.fm
MacOS_Linux/samples/: main.cpp
MacOS_Linux/test/: CMakeLists.txt  test_Abstraction.cpp  test_Environment.cpp  test_FunMarList.cpp  test_Scheme.cpp
libs/: FunMarBaseVisitor.cpp  FunMarBaseVisitor.h  FunMarParser.cpp
